# nspa

./: .gitignore  README.md  pyproject.toml  todo.md
src/nspa_cli/: __init__.py  cli.py  operations.py
src/nspa_cli/data/nspa/AA/: practice.md  review.md  tasks.md
